--- a/angular.json
+++ b/angular.json
@@ -123,6 +123,10 @@
               "devServerTarget": "raspberry:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {}
         }
       }
     }
